--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "socket.io-client": "^4.7.2",
     "underscore": "^1.13.6"
   },
   "devDependencies": {
