--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-select": "^5.8.0",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.2",
     "underscore": "^1.13.6"
   },
