--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "classnames": "^2.5.1",
@@ -22,8 +23,7 @@
     "react-router-dom": "^6.15.0",
     "react-select": "^5.8.0",
     "redux-persist": "^6.0.0",
-    "socket.io-client": "^4.7.2",
-    "underscore": "^1.13.6"
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
